fix: increased gap in navbar

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -751,6 +751,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 2rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .gap-x-0\.5 {
   -moz-column-gap: 0.125rem;
        column-gap: 0.125rem;
